--- a/openvpn/src/main/assets/full_licenses.html
+++ b/openvpn/src/main/assets/full_licenses.html
@@ -236,7 +236,7 @@ DEALINGS IN THE SOFTWARE.
 <br> * The implementation was written so as to conform with Netscapes SSL.
 <br> * 
 <br> * This library is free for commercial and non-commercial use as long as
-<br> * the following conditions are aheared to.  The following conditions
+<br> * the following conditions are adhered to.  The following conditions
 <br> * apply to all code found in this distribution, be it the RC4, RSA,
 <br> * lhash, DES, etc., code; not just the SSL code.  The SSL documentation
 <br> * included with this distribution is covered by the same copyright terms
